examples/test/testpolicy11638.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11638
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key3: value38
      key7: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value44
      podSelector:
        matchLabels:
          key31: value17
          key33: value4
